--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "tailwindcss build frontend/site.css -c frontend/tailwind.config.js -o static/site.css"
+    "build": "tailwindcss build frontend/site.css -c frontend/tailwind.config.js -o static/yohakuapp/site.css"
   },
   "engines": {
     "node": "15.x"
